force-app/main/default/objects/Implementation_Plan__c/Implementation_Plan__c.object-meta.xml
<CustomObject>
    <label>Implementation Plan</label>
    <nameField>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Implementation Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>