force-app/main/default/objects/Implementation_Plan__c/fields/Changes_to_Ideas__c.field-meta.xml
<CustomField>
    <fullName>Changes_to_Ideas__c</fullName>
    <label>Changes to Ideas</label>
    <length>13</length>
    <type>Text</type>
</CustomField>