force-app/main/default/objects/Implementation_Plan__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Objective</label>
    <referenceTo>Objective__c</referenceTo>
    <relationshipLabel>Implementation Plans</relationshipLabel>
    <relationshipName>Implementation_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>